[feat] EPIs and optional materials (#112)
