# gestepm-rest-api/src/main/resources/apis/gestepm-core-api/api-spec.yaml
@@ -3230,6 +3230,14 @@ components:
           format: date-time
         updatedBy:
           $ref: '#/components/schemas/User'
+        optionalMaterialIds:
+          type: array
+          x-stoplight:
+            id: skz8i8nl1xvka
+          items:
+            x-stoplight:
+              id: hdyn82mcaywsy
+            type: integer
       required:
         - id
         - share
@@ -4751,6 +4759,14 @@ components:
                     x-stoplight:
                       id: x8iadh3wymskh
                     format: date-time
+                  optionalMaterialIds:
+                    type: array
+                    x-stoplight:
+                      id: nbush1vypl3y9
+                    items:
+                      x-stoplight:
+                        id: af63jze7nm8gi
+                      type: integer
               files:
                 type: array
                 x-stoplight:
